--- a/cpp/2021_11_17/後期中間(1).md
+++ b/cpp/2021_11_17/後期中間(1).md
@@ -5,7 +5,7 @@
 ***
 
 ## コンパイル，リンクとはどのような作業か
-コンパイルとは，ソースコードを機械語のコードに変換する作業のことである．
+コンパイルとは，ソースコードを機械語のコードに変換する作業のことである．<br>
 リンクとは，機械語に翻訳されたファイルであるオブジェクトファイルをつなぎ合わせて1つのプログラムを作る作業のことである．
 
 ***
@@ -27,7 +27,7 @@ int main()
 ```
 
 ### (1) 円周率3.14を入力したときの，実行画面を書きなさい．(<u>入力</u>)
-<u>3.14</u>
+<u>3.14</u><br>
 円周率の値は3.14です。
 
 ### (2) double を int に変えると，実行画面はどのようになりますか？
