--- a/cpp/2021_11_17/後期中間(1).md
+++ b/cpp/2021_11_17/後期中間(1).md
@@ -26,8 +26,8 @@ int main()
 
 ```
 
-### (1) 円周率3.14を入力したときの，実行画面を書きなさい．(<u>入力</u>)
-<u>3.14</u><br>
+### (1) 円周率3.14を入力したときの，実行画面を書きなさい．(`<u>入力</u>`)
+`<u>3.14</u>`<br>
 円周率の値は3.14です。
 
 ### (2) double を int に変えると，実行画面はどのようになりますか？
