--- a/cpp/2021_11_17/後期中間(2).md
+++ b/cpp/2021_11_17/後期中間(2).md
@@ -105,21 +105,21 @@ for(int i=1; i<=5; i++){
 int W[10] = {17, 25, 23, 25, 79, 29, 1, 61, 59, 100};
 for(int i=0; i<9; i++){
     for(int j=i+1; j<10; j++){
-            if(W[i]<W[j]){      //右の方が大きければ
+            if(W[i]<W[j]){      //i番目に最も大きい数
                 int tmp = W[i]; 
-                W[i] = W[j];    //左に，元々右にあったのを代入
-                W[j] = tmp;     //右に，元々左にあったのを代入 すなわち，大きい順にソート
+                W[i] = W[j];    
+                W[j] = tmp;     
         }
     }
 }
 ```
 
-### (1) 外側のループが回る度に，配列の値はどう変化するか
+### (1) 外側のループが回る度に，配列の値はどう変化するか (5回分)
 |  | W[0] | W[1] | W[2] | W[3] | W[4] | W[5] | W[6] | W[7] | W[8] | W[9] |
 |---|---|---|---|---|---|---|---|---|---|---|
 |初期|17|25|23|25|79|29|1|61|59|100|
-|i==0|25|17|
-|i==1|
-|i==2|
-|i==3|
-|i==4|
+|i==0|100|17|23|25|25|29|1|61|59|79| // j=1のとき，j=2のとき…　と地道に考えた
+|i==1|100|79|17|23|25|25|1|29|59|61|
+|i==2|100|79|61|17|23|25|1|25|29|59|
+|i==3|100|79|61|59|17|23|1|25|25|29|
+|i==4|100|79|61|59|29|17|1|23|25|25|
