--- a/cpp/2021_11_17/後期中間(1).md
+++ b/cpp/2021_11_17/後期中間(1).md
@@ -90,7 +90,7 @@ else{
 ```
 
 ### (1) 誤りを訂正せよ
-"res = 1" -> "res == 1"
+`res = 1` -> `res == 1`
 
 ### (2) res が 1 であれば，「1 が入力されました。」と表示し，res が 2 であれば，「2 が入力されました。」と表示し，res が 1 でも 2 でもなければ，「1 か 2 を入力してください。」と表示する if 文を書きなさい
 ```cpp
