--- a/cpp/2021_11_17/後期中間(2).md
+++ b/cpp/2021_11_17/後期中間(2).md
@@ -20,7 +20,7 @@ switch(res){
 }
 ```
 
-### (1) 同じ動作をするif分を書きなさい
+### (1) 同じ動作をするif文を書きなさい
 ```cpp
 if(res==1){
     cout << "1が入力されました。" << endl;
@@ -98,7 +98,7 @@ for(int i=1; i<=5; i++){
     cout << i << "番目の繰り返しです。\n";
 }
 ```
-
+***
 ## パソコン甲子園2021 予選問題(1) 10問解いたら何点とれる？
 ### 降順にソートするプログラムについて
 ```cpp
@@ -118,8 +118,50 @@ for(int i=0; i<9; i++){
 |  | W[0] | W[1] | W[2] | W[3] | W[4] | W[5] | W[6] | W[7] | W[8] | W[9] |
 |---|---|---|---|---|---|---|---|---|---|---|
 |初期|17|25|23|25|79|29|1|61|59|100|
-|i==0|100|17|23|25|25|29|1|61|59|79| // j=1のとき，j=2のとき…　と地道に考えた
+|i==0|100|17|23|25|25|29|1|61|59|79|
 |i==1|100|79|17|23|25|25|1|29|59|61|
 |i==2|100|79|61|17|23|25|1|25|29|59|
 |i==3|100|79|61|59|17|23|1|25|25|29|
 |i==4|100|79|61|59|29|17|1|23|25|25|
+
+// j=1のとき，j=2のとき…　と地道に考えた
+
+### (2) 条件式 W[i]<W[j]は，全部で何回比較されるか
+(10 - 1) + (10 - 2) + (10 - 3) + ... + (10 - 9) = 45回
+
+※ これは正しい．(以下のコードを実行することで確認可)
+```cpp
+// 確認用プログラム
+
+#include <iostream>
+using namespace std;
+
+int main(){
+    int W[10] = {17, 25, 23, 25, 79, 29, 1, 61, 59, 100};
+    int ctr = 0;
+    for(int i=0; i<9; i++){
+        for(int j=i+1; j<10; j++){
+            ctr++;
+            if(W[i]<W[j]){      //i番目に最も大きい数
+                int tmp = W[i]; 
+                W[i] = W[j];    
+                W[j] = tmp;   
+            }
+        }
+        if(i<5){
+            cout << "when i==" << i << ":";
+            for(int j=0;j<10;j++){
+                cout << W[j] << ",";
+            }
+            cout << endl;
+        }
+    }
+
+    cout << "ctr == " << ctr << endl;
+
+    return 0;
+}
+```
+
+### (3) 昇順(小さい順)にソートするにはどこを変更すればよいか
+`W[i]<W[j]` -> `W[i]>W[j]`
