--- a/cpp/2021_11_17/後期中間(2).md
+++ b/cpp/2021_11_17/後期中間(2).md
@@ -129,7 +129,7 @@ for(int i=0; i<9; i++){
 ### (2) 条件式 W[i]<W[j]は，全部で何回比較されるか
 (10 - 1) + (10 - 2) + (10 - 3) + ... + (10 - 9) = 45回
 
-※ これは正しい．(以下のコードを実行することで確認可)
+__これは正しい．(以下のコードを実行することで確認可)__
 ```cpp
 // 確認用プログラム
 
