--- a/cpp/2021_11_17/後期中間(1).md
+++ b/cpp/2021_11_17/後期中間(1).md
@@ -28,9 +28,12 @@ int main()
 
 ### (1) 円周率3.14を入力したときの，実行画面を書きなさい．(`<u>入力</u>`)
 `<u>3.14</u>`<br>
+円周率の値はいくつですか？<br>
 円周率の値は3.14です。
 
 ### (2) double を int に変えると，実行画面はどのようになりますか？
+`<u>3.14</u>`<br>
+円周率の値はいくつですか？<br>
 円周率の値は3です。
 
 ***
@@ -73,8 +76,9 @@ int a=5, b=3;   // a=5 , b=3
 a = a+1;        // a=6 , b=3
 b--;            // a=6 , b=2 
 a /= b;         // a=3 , b=2 
-b = ++a;        // a=3 , b=4
-```
+b = ++a;        // a=4 , b=4
+```  
+__`b = ++a` 注意！aの値も変わっている__
 
 ***
 
@@ -167,6 +171,8 @@ int main(){
     else {
         cout << Bsum;
     }
+    
+    cout << endl;
 
     return 0;
 }
