--- a/cpp/2021_11_17/後期中間(1).md
+++ b/cpp/2021_11_17/後期中間(1).md
@@ -26,7 +26,7 @@ int main()
 
 ```
 
-### (1) 円周率3.14を入力したときの，実行画面を書きなさい．(`<u>入力</u>`)
+### (1) 円周率3.14を入力したときの，実行画面を書きなさい．(<u>`入力`</u>)
 `<u>3.14</u>`<br>
 円周率の値はいくつですか？<br>
 円周率の値は3.14です。
