--- a/cpp/2021_11_17/後期中間(1).md
+++ b/cpp/2021_11_17/後期中間(1).md
@@ -26,13 +26,13 @@ int main()
 
 ```
 
-### (1) 円周率3.14を入力したときの，実行画面を書きなさい．(<u>`入力`</u>には下線を書く)
-<u>`3.14`</u><br>
+### (1) 円周率3.14を入力したときの，実行画面を書きなさい．(<ins>`入力`</ins>には下線を書く)
+<ins>`3.14`</ins><br>
 円周率の値はいくつですか？<br>
 円周率の値は3.14です。
 
 ### (2) double を int に変えると，実行画面はどのようになりますか？
-`<u>3.14</u>`<br>
+<u>`3.14`</u><br>
 円周率の値はいくつですか？<br>
 円周率の値は3です。
 
@@ -94,7 +94,10 @@ else{
 ```
 
 ### (1) 誤りを訂正せよ
-`res = 1` -> `res == 1`
+```diff
+- res = 1 // 変更前
++ res == 1 // 変更後
+```
 
 ### (2) res が 1 であれば，「1 が入力されました。」と表示し，res が 2 であれば，「2 が入力されました。」と表示し，res が 1 でも 2 でもなければ，「1 か 2 を入力してください。」と表示する if 文を書きなさい
 ```cpp
