--- a/cpp/2021_11_17/後期中間(1).md
+++ b/cpp/2021_11_17/後期中間(1).md
@@ -26,13 +26,13 @@ int main()
 
 ```
 
-### (1) 円周率3.14を入力したときの，実行画面を書きなさい．(<ins>`入力`</ins>には下線を書く)
-<ins>`3.14`</ins><br>
+### (1) 円周率3.14を入力したときの，実行画面を書きなさい．(<ins>入力</ins>には下線を書く)
+<ins>3.14</ins><br>
 円周率の値はいくつですか？<br>
 円周率の値は3.14です。
 
 ### (2) double を int に変えると，実行画面はどのようになりますか？
-<u>`3.14`</u><br>
+<ins>3.14</ins><br>
 円周率の値はいくつですか？<br>
 円周率の値は3です。
 
