--- a/cpp/2021_11_17/後期中間(1).md
+++ b/cpp/2021_11_17/後期中間(1).md
@@ -95,8 +95,9 @@ else{
 
 ### (1) 誤りを訂正せよ
 ```diff
-- res = 1  // 変更前
-+ res == 1 // 変更後
+- res = 1
++ res == 1
+// - 変更前のコード，+ 変更後のコード です．これをdiff表記と言います．
 ```
 
 ### (2) res が 1 であれば，「1 が入力されました。」と表示し，res が 2 であれば，「2 が入力されました。」と表示し，res が 1 でも 2 でもなければ，「1 か 2 を入力してください。」と表示する if 文を書きなさい
