--- a/cpp/2021_11_17/後期中間(2).md
+++ b/cpp/2021_11_17/後期中間(2).md
@@ -124,7 +124,7 @@ for(int i=0; i<9; i++){
 |i==3|100|79|61|59|17|23|1|25|25|29|
 |i==4|100|79|61|59|29|17|1|23|25|25|
 
-// j=1のとき，j=2のとき…　と地道に考えた
+// j==1のとき，j==2のとき…　と地道に考えた
 
 ### (2) 条件式 W[i]<W[j]は，全部で何回比較されるか
 (10 - 1) + (10 - 2) + (10 - 3) + ... + (10 - 9) = 45回
