--- a/cpp/2021_11_17/後期中間(1).md
+++ b/cpp/2021_11_17/後期中間(1).md
@@ -72,11 +72,11 @@ int main(){
 ## 以下の計算について，各行を実行した後の変数の値を答えよ
 
 ```cpp
-int a=5, b=3;   // a=5 , b=3
-a = a+1;        // a=6 , b=3
-b--;            // a=6 , b=2 
-a /= b;         // a=3 , b=2 
-b = ++a;        // a=4 , b=4
+int a=5, b=3;   // a==5 , b==3
+a = a+1;        // a==6 , b==3
+b--;            // a==6 , b==2 
+a /= b;         // a==3 , b==2 
+b = ++a;        // a==4 , b==4
 ```  
 __`b = ++a` 注意！aの値も変わっている__
 
