--- a/cpp/2021_11_17/後期中間(1).md
+++ b/cpp/2021_11_17/後期中間(1).md
@@ -78,7 +78,7 @@ b--;            // a==6 , b==2
 a /= b;         // a==3 , b==2 
 b = ++a;        // a==4 , b==4
 ```  
-__`b = ++a` 注意！aの値も変わっている__
+__`b = ++a` 注意！aの値も変わっている__<br>
 __`b = a++` とした時，aをbに代入してからaをインクリメントしている(後置インクリメント)．b==3．__
 
 ***
