--- a/cpp/220126/学年末試験.md
+++ b/cpp/220126/学年末試験.md
@@ -76,11 +76,11 @@ ans
 using namespace std;
 
 int main(){
-    int Sides[3];
+    int sides[3];
     cout << "3辺の長さを入力してください。" << endl;
     for(int i=0;i<3;i++){
-        cin >> Sides[i];
-        Sides[i]*=Sides[i];
+        cin >> sides[i];
+        sides[i]*=sides[i];
     }
 
     if(
